// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-layout Basic renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled none block-mm"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            My page title
          </div>
          <div
            className="px24"
          >
            <a
              className="link block mb6"
              href="#section-1"
            >
              Section 1
            </a>
            <a
              className="link block mb6"
              href="#section-2"
            >
              Section 2
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div
      className="prose"
    >
      <h1>
        PageLayout
      </h1>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <h2
        id="section-1"
      >
        Section 1
      </h2>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <h2
        id="section-2"
      >
        Section 2
      </h2>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
  </div>
</div>
`;

exports[`page-layout Code highlighting test renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled none block-mm"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Some title
          </div>
          <div>
            Some content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div
      className="prose"
    >
      <h2>
        Has scrollbar
      </h2>
      <pre
        className=" language-curl"
      >
        <code
          className=" language-curl"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </code>
      </pre>
      <h2>
        No scrollbar
      </h2>
      <pre>
        <code>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`page-layout Common use case renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled block"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Section title
          </div>
          <div
            className="dr-ui--navigation-accordion"
          >
            <div
              className="block-mm none"
            >
              <div
                className="px12 block-mm none bg-lighten75"
              >
                <div
                  className="py3 "
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-one"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child color-black"
                    >
                      Title one
                      
                    </div>
                  </a>
                  <div
                    className="ml24 pt0"
                  >
                    <ul
                      className="txt-m pb12 inline-block-mm none unprose"
                    >
                      <li
                        className="mb6"
                      >
                        <a
                          className="color-blue-on-hover"
                          href="#heading-one"
                          id="#heading-one-sidebar"
                        >
                          Heading one
                          
                        </a>
                        <ul
                          className="none"
                        />
                      </li>
                      <li
                        className="mb6"
                      >
                        <a
                          className="color-blue-on-hover"
                          href="#heading-two"
                          id="#heading-two-sidebar"
                        >
                          Heading two
                          
                        </a>
                        <ul
                          className="none"
                        />
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-two"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title two
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
            </div>
            <div
              className="none-mm block bg-gray-faint px24 py12"
            >
              <div
                className="dr-ui--navigation-dropdown relative"
              >
                <button
                  aria-controls="navigation-accordion-dropdown-menu"
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Toggle menu"
                  className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate relative border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
                  id="navigation-accordion-dropdown-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                >
                  Title one
                  <svg
                    className="events-none icon inline-block align-t"
                    focusable="false"
                    role="presentation"
                    style={
                      Object {
                        "height": 18,
                        "width": 18,
                      }
                    }
                  >
                    <use
                      xlinkHref="#icon-chevron-down"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="navigation-accordion-dropdown-toggle-button"
                  className="none"
                  id="navigation-accordion-dropdown-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-selected="true"
                    className="block w-full px12 bg-gray-faint link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-0"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title one
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-1"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title two
                    
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div>
      <p
        className="mb24"
      >
        Vestibulum id ligula porta felis euismod semper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula porta felis euismod semper.
      </p>
      <p
        className="mb24"
      >
        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
      </p>
      <p
        className="mb24"
      >
        Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
      </p>
      <p
        className="mb24"
      >
        Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
      </p>
    </div>
  </div>
</div>
`;

exports[`page-layout Custom sidebar column size renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm col--3-ml col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled none block-mm"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Some title
          </div>
          <div>
            Some content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm col--9-ml col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div>
      Doc content
    </div>
  </div>
</div>
`;

exports[`page-layout Custom sidebar column size, too large - default to original size renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled none block-mm"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Some title
          </div>
          <div>
            Some content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div>
      Doc content
    </div>
  </div>
</div>
`;

exports[`page-layout Custom sidebar column size, too small - default to original size renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled none block-mm"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Some title
          </div>
          <div>
            Some content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div>
      Doc content
    </div>
  </div>
</div>
`;

exports[`page-layout Many first level items renders as expected 1`] = `
<div
  className="grid"
>
  <div
    className="col col--4-mm  col--12 bg-gray-faint"
    data-swiftype-index="false"
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "0px",
            "zIndex": 3,
          }
        }
      >
        <div
          className="pt12-mm pt0 viewport-almost-mm scroll-auto-mm scroll-styled block"
          id="dr-ui--page-layout-sidebar"
        >
          <div
            className="txt-l color-blue txt-fancy mb12 block-mm none mx24"
          >
            Section title
          </div>
          <div
            className="dr-ui--navigation-accordion"
          >
            <div
              className="block-mm none"
            >
              <div
                className="px12 block-mm none bg-lighten75"
              >
                <div
                  className="py3 "
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-one"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child color-black"
                    >
                      Title one
                      
                    </div>
                  </a>
                  <div
                    className="ml24 pt0"
                  >
                    <ul
                      className="txt-m pb12 inline-block-mm none unprose"
                    >
                      <li
                        className="mb6"
                      >
                        <a
                          className="color-blue-on-hover"
                          href="#heading-one"
                          id="#heading-one-sidebar"
                        >
                          Heading one
                          
                        </a>
                        <ul
                          className="none"
                        />
                      </li>
                      <li
                        className="mb6"
                      >
                        <a
                          className="color-blue-on-hover"
                          href="#heading-two"
                          id="#heading-two-sidebar"
                        >
                          Heading two
                          
                        </a>
                        <ul
                          className="none"
                        />
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-two"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title two
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-three"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title three
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-four"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title four
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-five"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title five
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-six"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title six
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-seven"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title seven
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-eight"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title eight
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-nine"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title nine
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
              <div
                className="px12 block-mm none"
              >
                <div
                  className="py3  border-t border--gray-light"
                >
                  <a
                    className="color-blue-on-hover color-gray text-decoration-none unprose flex-parent flex-parent--space-between-main flex-parent--center-cross"
                    href="page-ten"
                  >
                    <div
                      className="pl12 py12 txt-bold txt-m flex-child"
                    >
                      Title ten
                      
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink"
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </a>
                  
                </div>
              </div>
            </div>
            <div
              className="none-mm block bg-gray-faint px24 py12"
            >
              <div
                className="dr-ui--navigation-dropdown relative"
              >
                <button
                  aria-controls="navigation-accordion-dropdown-menu"
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Toggle menu"
                  className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate relative border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
                  id="navigation-accordion-dropdown-toggle-button"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                >
                  Title one
                  <svg
                    className="events-none icon inline-block align-t"
                    focusable="false"
                    role="presentation"
                    style={
                      Object {
                        "height": 18,
                        "width": 18,
                      }
                    }
                  >
                    <use
                      xlinkHref="#icon-chevron-down"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    />
                  </svg>
                </button>
                <ul
                  aria-labelledby="navigation-accordion-dropdown-toggle-button"
                  className="none"
                  id="navigation-accordion-dropdown-menu"
                  onBlur={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-selected="true"
                    className="block w-full px12 bg-gray-faint link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-0"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title one
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-1"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title two
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-2"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title three
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-3"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title four
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-4"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title five
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-5"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title six
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-6"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title seven
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-7"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title eight
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-8"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title nine
                    
                  </li>
                  <li
                    aria-selected="false"
                    className="block w-full px12 link bg-gray-faint-on-hover py3 link--gray"
                    disabled={false}
                    id="navigation-accordion-dropdown-item-9"
                    onClick={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                  >
                    Title ten
                    
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col col--8-mm  col--12 mt24-mm mb60 pr0-mm px36-mm"
    id="docs-content"
  >
    <div>
      <p
        className="mb24"
      >
        Vestibulum id ligula porta felis euismod semper. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula porta felis euismod semper.
      </p>
      <p
        className="mb24"
      >
        Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
      </p>
      <p
        className="mb24"
      >
        Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
      </p>
      <p
        className="mb24"
      >
        Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
      </p>
    </div>
  </div>
</div>
`;
